--- a/.gitignore
+++ b/.gitignore
@@ -46,12 +46,9 @@ Cargo.lock
 #.idea/
 ### react template
 .DS_*
-*.log
-logs
 **/*.backup.*
 **/*.back.*
 
-node_modules
 bower_components
 
 *.sublime*
@@ -61,4 +58,4 @@ thumb
 sketch
 
 ./dist
-./.vscode
+./.vscode/*
