--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,5 +24,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.43.0", features = ["full"] }
 tokio-serial = "5.4.5"
-rusqlite = "0.34.0"
+rusqlite = { version = "0.34.0", features = ["bundled"] }
 
