--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,11 +18,15 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["devtools"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.43.0", features = ["full"] }
 tokio-serial = "5.4.5"
 rusqlite = { version = "0.34.0", features = ["bundled"] }
-
+chrono = { version = "0.4.40", features = ["serde"] }
+umya-spreadsheet = "2.2.3"
+tokio-util = { version = "0.7.16", features = ["full"] }
+futures = "0.3.31"
+tauri-plugin-dialog = "2"
